--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.json:json:20190722'
-//	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+	implementation 'org.projectlombok:lombok:1.18.12'
+	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.10.1'
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
